# WellApplication

./: .travis.yml  CHANGES.txt  CHANGES.txt~  LICENSE  LICENSE.txt  MANIFEST  Makefile  README.md  README.md~  README.rst  README.rst~  conf.py  index.html  make.bat  params.json  pyproject.toml  requirements.txt  setup.py  setup.py~
.doctrees/: README.doctree  index.doctree
WellApplication.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_build/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: README.doctree  environment.pickle  index.doctree
_sources/: README.txt
app/: __init__.py
app/test/: __init__.py
docs/: 20160919_LittleHobble.xle  20161102_Barometer.xle  All tape measurements.csv  ManualMeasurements.csv  Transport.ipynb  UMAR_Chem_Compile.ipynb  UMAR_WL_Data.ipynb  USGS.ipynb  USGS_Interpolate.ipynb  WQP Import.ipynb  ag13a 2016-08-02.xle  ag13c 2016-08-02.xle  ag14a 2016-08-02.csv  baro.csv  pw01b 2016-08-02.xle  wellinfo4.csv
test/: 20160919_LittleHobble.xle  20161102_Barometer.xle  All tape measurements.csv  ManualMeasurements.csv  __init__.py  __init__.py~  ag13a 2016-08-02.xle  ag13c 2016-08-02.xle  ag14a 2016-08-02.csv  baro.csv  mesotest.py  pw01b 2016-08-02.xle  test.py  usgsP.csv  wellinfo4.csv
wellapplication/: MannKendall.py  __init__.py  __init__.py~  arcpy_functions.py  avgMeths.py  chem.py  gis.py  graphs.py  hydropy.py  mesopy.py  nwis.py  ros.py  transport.py  transport.py~  usgs.py  usgsGis.py  usgsGis.py~
wellapplication.egg-info/: PKG-INFO  SOURCES.txt
(+4 files in other folders)
